<resources>
    <string name="app_name">Robot Controller</string>
    <string name="ip">IP:</string>
    <string name="btn_AddTitle">Set Up</string>

    <string name="enable_send">Enable Send Message</string>
    <string name="disable_send">Disable Send Message</string>

    <string name="settings_menu_item">Settings</string>

    <string name="default_value_IP">172.168.0.10</string>
    <string name="default_value_Port">4445</string>

    <string name="port_preference_key" translatable="false">port_udp</string>
    <string name="ip_preference_key" translatable="false">ip_udp</string>
    <string name="switch_send_key" translatable="false">switch_send_message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
